--- a/layouts/authors/single.html
+++ b/layouts/authors/single.html
@@ -4,6 +4,10 @@
 
     <table>
         <tr>
+            <td>Email:</td>
+            <td><a href="mailto:{{ $params.email }}">{{ $params.email }}</a></td>
+        </tr>
+        <tr>
             <td>Website:</td>
             <td><a href="{{ $params.website }}">{{ $params.website }}</a></td>
         </tr>
