--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,58 @@ a {
   text-decoration: none;
 }
 
+blockquote {
+  border-left: darkkhaki 0.3vh solid;
+  padding-left: 1vh;
+  background-color: floralwhite;
+  width: fit-content;
+  padding: 0.5rem 1rem;
+  min-width: 20rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+blockquote {
+  p {
+    display: inline;
+
+    &:first-of-type {
+      quotes: '\201C' '\201D' '\2018' '\2019';
+
+      &::before {
+        content: open-quote;
+        margin-right: 0.1rem;
+      }
+    }
+
+    &:last-of-type {
+      quotes: '\201C' '\201D' '\2018' '\2019';
+      font-style: italic;
+
+      &::before {
+        content: close-quote "\000A" "\2014" " ";
+        white-space: pre;
+        margin-left: 0.1rem;
+        font-style: normal;
+      }
+    }
+
+    &:only-of-type {
+      font-style: normal;
+      quotes: '\201C' '\201D' '\2018' '\2019';
+
+      &::before {
+        content: open-quote;
+        margin-right: 0.1rem;
+      }
+
+      &::after {
+        content: close-quote;
+        margin-left: 0.1rem;
+      }
+    }
+  }
+}
+
 .highlight {
   width: fit-content;
 }
@@ -73,7 +125,7 @@ nav {
   display: flex;
   flex-direction: row;
   height: 100%;
- }
+}
 
 .navbar ul {
   margin: 0;
@@ -132,7 +184,7 @@ main {
   position: absolute;
   background-color: #3a3a3a;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
 }
@@ -174,6 +226,7 @@ main {
   padding: 0;
   font-size: medium;
 }
+
 .author .author-email p {
   margin: 0;
   padding: 0;
