--- a/layouts/partials/navigators/navbar.html
+++ b/layouts/partials/navigators/navbar.html
@@ -36,7 +36,7 @@
       <li><a href="/incidents">Incidents</a></li>
       <li><a href="/groups">Groups</a></li>
       {{ if $blogEnabled }}
-        <li><a href="/posts">Posts</a></li>
+        <li><a href="/posts">Articles</a></li>
       {{ end }}
       <li><a href="/authors">Authors</a></li>
       <li>
