--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
   {{ partial "head.html" . }}
 </head>
 <body>
-  <header>
+  <header class="navbar">
     {{ partial "header.html" . }}
   </header>
   <main>
