Edit margin and groups.
Set margin on list items to give some space between items.
Set groups to only show up if there are any.

--- a/layouts/partials/navigators/pages.html
+++ b/layouts/partials/navigators/pages.html
@@ -1,6 +1,7 @@
 {{ $pages := where site.Pages "Section" .section }}
 {{ $pages = where $pages ".Name" "in" .pages }}
 {{ .site.GetPage "groups" }}
+{{ if $pages }}
 <header>
     {{ range (where site.Sections ".Section" .section) }}
     <h3>{{ .Name }}</h3>
@@ -10,4 +11,5 @@
 <ul>
     <li><a href="{{ .RelPermalink }}">{{ .Name }}</a></li>
 </ul>
+{{ end }}
 {{ end }}
